--- a/water-it/angular.json
+++ b/water-it/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
               "node_modules/apexcharts/dist/apexcharts.min.js"
@@ -107,5 +108,8 @@
       }
     }
   },
-  "defaultProject": "water-it"
+  "defaultProject": "water-it",
+  "cli": {
+    "analytics": false
+  }
 }
