--- a/water-it/package.json
+++ b/water-it/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@asymmetrik/ngx-leaflet": "^13.0.1",
+    "@types/leaflet": "^1.9.3",
     "apexcharts": "^3.37.2",
+    "leaflet": "^1.7.3",
     "ng-apexcharts": "^1.7.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -31,6 +34,7 @@
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/leaflet": "^1.7.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
